# humanoid_planning

./: .gitignore  CHANGELOG  LICENSE  README.md  README_CN.md  aurora_core.bash  docker_run.bash  docker_run_pink.bash  generate_and_install_msg.sh  install_pink.sh
config/: config.yaml
doc/CN/: aurora_dds_reference_CN.md  custom_dds_idl_tutorial_CN.md  developer_guide_CN.md  installation_CN.md  introduction_CN.md  joystick_tutorial_CN.md  robot_controller_reference_CN.md  robotdata_reference_CN.md  task_tutorial_CN.md
doc/EN/: aurora_dds_reference_EN.md  custom_dds_idl_tutorial_EN.md  developer_guide_EN.md  installation_EN.md  introduction_EN.md  joystick_tutorial_EN.md  robot_controller_reference_EN.md  robotdata_reference_EN.md  task_tutorial_EN.md
example/gr2/: CMakeLists.txt
example/gr2/config/: user_runner_config.yaml
example/gr2/dds_comm_task/: CMakeLists.txt
example/gr2/dds_comm_task/include/: DdsCommTask.hpp
example/gr2/dds_comm_task/src/: DdsCommTask.cpp
example/gr2/movejoint_task/: CMakeLists.txt
example/gr2/movejoint_task/include/: MovejointTask.hpp
example/gr2/movejoint_task/src/: MovejointTask.cpp
example/gr2/simple_loco_task/: CMakeLists.txt
example/gr2/simple_loco_task/config/: config_gr2_mix.yaml
example/gr2/simple_loco_task/simple_loco_task/include/: GaitGenerator.hpp  PolicyParent.hpp  SimpleLocoParameter.hpp  SimpleLocoPolicy.hpp  SimpleLocoTask.hpp  SuperDeque.hpp
example/gr2/simple_loco_task/src/: SimpleLocoParameter.cpp  SimpleLocoPolicy.cpp  SimpleLocoTask.cpp
idl/fourier_msgs/msg/: TeleoperationCmd.idl
idl/std_msgs/msg/: Header.idl  Time.idl
idl/std_msgs/srv/: Trigger.idl
python/: README.md
python/src/examples/: client_usage.py  client_usage1.py  ik_utils.py  robot.urdf  test_ik.py
python/src/examples/teleoperation_samples/: robot.py  robot_wrapper.py
python/src/fourier_aurora_client/: __init__.py  aurora_state_map.py  client.py  dds_interface.py  qos_profile.py
sim/: start_simulate_root.py
sim/mujoco/: get_names_and_id.py  simulator_pub_msg.py  simulator_sub_msg.py  viewer.py
